@startuml
entity "categories" as cat {
  * category_id : INT <<PK>>
  --
  * name : VARCHAR
  * display_order : INT
  * active : TINYINT
}

entity "products" as prod {
  * product_id : INT <<PK>>
  --
  * category_id : INT <<FK>>
  * product_code : VARCHAR
  * name : VARCHAR
  * image_path : VARCHAR
  * stock_quantity : INT
  * active : TINYINT
}

entity "product_sizes" as psize {
  * product_size_id : INT <<PK>>
  --
  * product_id : INT <<FK>>
  * size_name : VARCHAR
  * sale_price : DECIMAL
  * active : TINYINT
}

entity "toppings" as top {
  * topping_id : INT <<PK>>
  --
  * name : VARCHAR
  * extra_price : DECIMAL
  * active : TINYINT
}

entity "users" as usr {
  * user_id : INT <<PK>>
  --
  * username : VARCHAR
  * password_hash : VARCHAR
  * active : TINYINT
}

entity "employees" as emp {
  * employee_id : INT <<PK>>
  --
  * user_id : INT <<FK>>
  * full_name : VARCHAR
  * phone : VARCHAR
  * address : VARCHAR
}

entity "orders" as ord {
  * order_id : BIGINT <<PK>>
  --
  * employee_id : INT <<FK>>
  * order_code : VARCHAR
  * total_amount : DECIMAL
  * received_amount : DECIMAL
  * change_amount : DECIMAL
  * order_time : DATETIME
  * status : VARCHAR
}

entity "order_items" as oitem {
  * order_item_id : BIGINT <<PK>>
  --
  * order_id : BIGINT <<FK>>
  * product_id : INT <<FK>>
  * product_size_id : INT <<FK>>
  * quantity : INT
  * unit_price : DECIMAL
  * line_total : DECIMAL
}

entity "order_item_toppings" as otop {
  * item_topping_id : BIGINT <<PK>>
  --
  * order_item_id : BIGINT <<FK>>
  * topping_id : INT <<FK>>
  * unit_price : DECIMAL
}

cat ||--o{ prod
prod ||--o{ psize
prod ||--o{ oitem
usr ||--o| emp
emp ||--o{ ord
ord ||--o{ oitem
oitem ||--o{ otop
top ||--o{ otop
@enduml
